--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,9 +109,10 @@ jobs:
 
             /tmp/act.sh & make -j$(nproc --all) recoveryimage
 
-            rename 's/\.zip$/_64bit.zip/' release/*zip
-            rename 's/\.zip$/_32bit.zip/' out/target/product/${CODENAME}/*zip
-            cp out/target/product/${CODENAME}/SHRP*.zip release/
+            ls -a release/
+            rename 's/\.zip$/_64bit.zip/' release/*zip && ls -a release/
+            rename 's/\.zip$/_32bit.zip/' out/target/product/${CODENAME}/SHRP*zip
+            cp out/target/product/${CODENAME}/SHRP*.zip release/ && ls -a release/
       - run:
           name: Release all built files
           command: |
